REOPENED297970
"Is Apple Application?" simualated crash reports for WK1 WebView use sometimes result from non-Apple code
https://bugs.webkit.org/show_bug.cgi?id=297970
Summary "Is Apple Application?" simualated crash reports for WK1 WebView use sometime...
Brady Eidson
Reported 2025-08-27 10:02:48 PDT
"Is Apple Application?" simualated crash reports for WK1 WebView use sometimes result from non-Apple code
Attachments
Brady Eidson
Comment 1 2025-08-27 10:02:49 PDT
Brady Eidson
Comment 2 2025-08-27 10:06:03 PDT
EWS
Comment 3 2025-08-27 12:07:41 PDT
Committed 299220@main (e0ddfac2e79f): <https://commits.webkit.org/299220@main> Reviewed commits have been landed. Closing PR #49940 and removing active labels.
David Kilzer (:ddkilzer)
Comment 4 2025-08-30 08:31:34 PDT
David Kilzer (:ddkilzer)
Comment 5 2025-08-30 08:31:46 PDT
Re-opening for pull request https://github.com/apple/WebKit/pull/3570
Note You need to log in before you can comment on or make changes to this bug.