"Is Apple Application?" simualated crash reports for WK1 WebView use sometimes result from non-Apple code rdar://158661557 https://bugs.webkit.org/show_bug.cgi?id=297970

Reviewed by David Kilzer.

When we added the "Is a WebView created inside an Apple Application?" simulated crash report,
we didn't consider that the Apple Application might host 3rd party code by design, and that the
3rd party code might be the one creating a WebView.

This patch adds an exemption for the first known case of this, and rearchitects things to make
adding any future exemptions easy.

* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h:
* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.mm:
(WTF::CocoaApplication::shouldOSFaultLogForAppleApplication):
* Source/WebCore/platform/ios/wak/WebCoreThread.mm:
(WebThreadEnable):
* Source/WebCore/workers/WorkerRunLoop.cpp:
(WebCore::WorkerDedicatedRunLoop::run):
* Source/WebKitLegacy/mac/WebView/WebView.mm:
(+[WebView initialize]):

Canonical link: https://commits.webkit.org/299220@main